<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/klettersteigListFragment"
        android:name="com.example.firstandroidapp.KletterSteigListFragment"
        android:label="@string/chat_fragment_label">
        <action
            android:id="@+id/action_SupportFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ChatRoomFragment"
        android:name="com.example.firstandroidapp.ChatRoomFragment"
        android:label="@string/chat_fragment_label">
        <action
            android:id="@+id/action_SupportFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SupportFragment"
        android:name="com.example.firstandroidapp.SupportFragment"
        android:label="@string/support_fragment_label">
        <action
            android:id="@+id/action_SupportFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.firstandroidapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_UserDetailFragment"
            app:destination="@id/UserDetailFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SupportFragment"
            app:destination="@id/SupportFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_KletterSteig"
            app:destination="@id/KletterSteig" />
        <action
            android:id="@+id/action_FirstFragment_to_ChatRoomFragment"
            app:destination="@id/ChatRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/UserDetailFragment"
        android:name="com.example.firstandroidapp.UserDetailsFragment"
        android:label="@string/third_fragment_label">

        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/KletterSteig"
        android:name="com.example.firstandroidapp.KletterSteigFragment"
        android:label="@string/klettersteig_fragment_label">

        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.firstandroidapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment2"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_UserDetailFragment"
            app:destination="@id/UserDetailFragment" />
    </fragment>
</navigation>